@@ -24,7 +24,6 @@
 #include "marked-up_text.hpp"
 #include "show_dialog.hpp"
 #include "sha1.hpp"
-#include "serialization/binary_wml.hpp"
 #include "serialization/binary_or_text.hpp"
 #include "serialization/parser.hpp"
 
